--- a/global.css
+++ b/global.css
@@ -11,6 +11,9 @@ body {
     /*overflow-y: hidden;*/
     /*background: linear-gradient(#999, #666);*/
 }
+a{
+    text-decoration: none;
+}
 #container{
     width: 100%;
 }
@@ -318,13 +321,14 @@ body {
     position: relative;
     background: rgba(255, 255, 255, 0.4);
     height: 2px;
-    margin-left: 7px; /* trackerwidth/2 */
+    margin-left: 45px; /* trackerwidth/2 */
     margin-right: 27px; /* parentpadding * 2 + trackerwidth/2 - 1*/
 }
 #trackerbar .actual-line{
     position: relative;
     height: 0px;
     margin-right: 36px; /* Parentpadding * 2 + trackerwidth */
+    margin-left: 38px;
 }
 #trackerbar .actual-line .tracker{
     position: absolute;
@@ -334,6 +338,12 @@ body {
     border-left: 8px solid transparent;
     width: 0px;
     height: 0px;
+    /*transition: left 1s ease;*/
+    -webkit-transition: left 1s linear;
+       -moz-transition: left 1s linear;
+        -ms-transition: left 1s linear;
+         -o-transition: left 1s linear;
+            transition: left 1s linear;
     /*cursor: pointer;*/
 }
 #trackerbar .line-containment{
